Implementing a bunch of React ToDos.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1849,6 +1849,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3223c51c",
+   "metadata": {},
+   "source": [
+    "# CSS Grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c5a8872",
+   "metadata": {},
+   "source": [
+    "Grid often works better for __2D layouts__ than flexbox.  They can sometimes be used together (for instance for objects inside a master layout).\n",
+    "\n",
+    "This snippet creates a simple grid with two rows and three columns, and places some content in various grid cells:\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <title>Basic CSS Grid Layout</title>\n",
+    "    <style>\n",
+    "        .grid-container {\n",
+    "            display: grid;\n",
+    "            grid-template-columns: auto auto auto; /* Three columns */\n",
+    "            grid-template-rows: auto auto; /* Two rows */\n",
+    "            gap: 10px; /* Space between rows and columns */\n",
+    "            padding: 10px;\n",
+    "        }\n",
+    "\n",
+    "        .grid-item {\n",
+    "            background-color: rgba(255, 255, 255, 0.8);\n",
+    "            border: 1px solid rgba(0, 0, 0, 0.8);\n",
+    "            padding: 20px;\n",
+    "            text-align: center;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<div class=\"grid-container\">\n",
+    "    <div class=\"grid-item\">1</div>\n",
+    "    <div class=\"grid-item\">2</div>\n",
+    "    <div class=\"grid-item\">3</div>\n",
+    "    <div class=\"grid-item\">4</div>\n",
+    "    <div class=\"grid-item\">5</div>\n",
+    "    <div class=\"grid-item\">6</div>\n",
+    "</div>\n",
+    "\n",
+    "</body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "- **.grid-container**: This class is applied to the container element. It defines the display as `grid`. `grid-template-columns` and `grid-template-rows` are used to define the layout of the grid. Here, it's set to have three columns and two rows.\n",
+    "\n",
+    "- **.grid-item**: This class is for the items inside the grid. You can style these items as you like. In this example, they have a background color, a border, padding, and centered text.\n",
+    "\n",
+    "- **gap**: This property sets the gap between grid rows and columns.\n",
+    "\n",
+    "Each `<div>` with the class `grid-item` represents a cell in the grid, and they are automatically placed in the grid in the order they appear.\n",
+    "\n",
+    "You can adjust the number of columns, rows, and the styling to suit your layout needs. CSS Grid is very powerful and can be used to create complex layouts with relative ease."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3dcd6b7d",
    "metadata": {},
    "source": [
@@ -1944,9 +2009,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c21148f",
+   "metadata": {},
+   "source": [
+    "# HTML Forms\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <title>Sample Form</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <form action=\"/submit_form\" method=\"post\">\n",
+    "        <h2>Registration Form</h2>\n",
+    "\n",
+    "        <!-- Text Input -->\n",
+    "        <label for=\"name\">Name:</label>\n",
+    "        <input type=\"text\" id=\"name\" name=\"name\" required><br><br>\n",
+    "\n",
+    "        <!-- Email Input -->\n",
+    "        <label for=\"email\">Email:</label>\n",
+    "        <input type=\"email\" id=\"email\" name=\"email\" required><br><br>\n",
+    "\n",
+    "        <!-- Password Input -->\n",
+    "        <label for=\"password\">Password:</label>\n",
+    "        <input type=\"password\" id=\"password\" name=\"password\" required><br><br>\n",
+    "\n",
+    "        <!-- Number Input -->\n",
+    "        <label for=\"age\">Age:</label>\n",
+    "        <input type=\"number\" id=\"age\" name=\"age\" min=\"18\" max=\"100\"><br><br>\n",
+    "\n",
+    "        <!-- Radio Buttons -->\n",
+    "        <label>Gender:</label>\n",
+    "        <input type=\"radio\" id=\"male\" name=\"gender\" value=\"male\">\n",
+    "        <label for=\"male\">Male</label>\n",
+    "        <input type=\"radio\" id=\"female\" name=\"gender\" value=\"female\">\n",
+    "        <label for=\"female\">Female</label><br><br>\n",
+    "\n",
+    "        <!-- Checkbox -->\n",
+    "        <input type=\"checkbox\" id=\"subscribe\" name=\"subscribe\" value=\"yes\">\n",
+    "        <label for=\"subscribe\">Subscribe to newsletter</label><br><br>\n",
+    "\n",
+    "        <!-- Dropdown -->\n",
+    "        <label for=\"country\">Country:</label>\n",
+    "        <select id=\"country\" name=\"country\">\n",
+    "            <option value=\"usa\">United States</option>\n",
+    "            <option value=\"uk\">United Kingdom</option>\n",
+    "            <option value=\"canada\">Canada</option>\n",
+    "            <option value=\"australia\">Australia</option>\n",
+    "        </select><br><br>\n",
+    "\n",
+    "        <!-- Textarea -->\n",
+    "        <label for=\"bio\">Bio:</label><br>\n",
+    "        <textarea id=\"bio\" name=\"bio\" rows=\"4\" cols=\"50\"></textarea><br><br>\n",
+    "\n",
+    "        <!-- Submit Button -->\n",
+    "        <input type=\"submit\" value=\"Register\">\n",
+    "\n",
+    "        <!-- Reset Button -->\n",
+    "        <input type=\"reset\" value=\"Reset\">\n",
+    "    </form>\n",
+    "</body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "- **Form Tag**: `<form action=\"/submit_form\" method=\"post\">` defines the form and specifies where to send the form data when submitted.\n",
+    "\n",
+    "- **Input Fields**: Various types of input fields like text, email, password, number, radio buttons, and checkboxes.\n",
+    "\n",
+    "- **Required Fields**: The `required` attribute in input fields to ensure they are filled out.\n",
+    "\n",
+    "- **Labels**: The `<label>` tags are used for better accessibility and form readability.\n",
+    "\n",
+    "- **Select (Dropdown)**: A dropdown list to select an option.\n",
+    "\n",
+    "- **Textarea**: A larger area for text input, suitable for comments or messages.\n",
+    "\n",
+    "- **Submit Button**: A button to submit the form.\n",
+    "\n",
+    "- **Reset Button**: A button to clear all inputs in the form.\n",
+    "\n",
+    "This form includes a mix of different controls that are commonly used in web forms, providing a good overview of the capabilities of HTML forms."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6562dac0",
+   "id": "8a0293b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1968,7 +2119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
