--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56f5d670",
+   "id": "ff09215a",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8dcf258",
+   "id": "b6ea5b51",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,40 +20,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebde67b",
+   "id": "ae1a9b14",
+   "metadata": {},
+   "source": [
+    "# Links\n",
+    "\n",
+    "https://react.dev/ - main React page\n",
+    "\n",
+    "https://react.dev/learn - learning react\n",
+    "\n",
+    "https://react.dev/reference/react - react API reference\n",
+    "\n",
+    "https://create-react-app.dev/docs/getting-started - info about how to do various things with the create app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca67c642",
    "metadata": {},
    "source": [
     "# ToDo\n",
     "\n",
-    "1. paste-clean-diff usage\n",
-    "1. SCSS\n",
-    "1. CSS encapsulation\n",
-    "1. Pure HTML templates?\n",
     "1. Deep Dive into the Default Project setup/config\n",
     "1. Adding React the other way (to existing HTML+TS page)\n",
     "1. Classes as Components\n",
     "1. Coding Conventions (esp. for TS since tutorials use ugly JS style)\n",
-    "1. rxjs?\n",
-    "1. useState() and reference members\n",
-    "1. more advanced routing\n",
-    "1. React Query\n",
     "1. React Devtools Extension (and using it on public sites that use react)\n",
     "1. PropTypes library (for JS only)\n",
     "1. Node running in general, esp. running React & Angular\n",
     "1. useContext/React Context (and when to use vs. Redux)\n",
     "1. Testing (Jest vs. Jasmine) (https://handsonreact.com/docs/testing)\n",
-    "1. Official React site\n",
-    "1. JS vs. TS ChatGPT thread from before\n",
+    "1. Official React site articles/tutorials\n",
     "1. XSS vulnerabilities\n",
     "1. Component libraries?\n",
-    "1. Brush up on Grid and Flexbox\n",
-    "1. Bootstrap framework\n",
-    "1. Bazel Integration"
+    "1. Bootstrap framework"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28e02ee5",
+   "id": "53950080",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -61,14 +66,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37f4ea9",
+   "id": "fa860055",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
     "- React doesn't use templates - just code\n",
     "- React is smaller to learn and include than Angular because less comprehensive\n",
     "- React = more popular for small websites while Angular = more popular for enterprise\n",
-    "- Instead of bootstrapping existing HTML like Angular, you use __Node__ to run the app.\n",
     "- no modules needed because HTML and TS/JS are together in 1 file\n",
     "- use (remapped) versions of built-in attributes, handlers, etc. instead of Angular's bindings\n",
     "- change detection happens on each call of functions that get JSX/TSX\n",
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8f6f23",
+   "id": "804faae5",
    "metadata": {},
    "source": [
     "# Setup"
@@ -91,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9598c388",
+   "id": "4d224b43",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594694dc",
+   "id": "f8210859",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66ceb18",
+   "id": "611a3e11",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe754222",
+   "id": "1bd5f7a0",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b428e3db",
+   "id": "5e8d846f",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf2948c",
+   "id": "d95b4471",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85cdbff",
+   "id": "f16bb505",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "047b5587",
+   "id": "ba6a29e6",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ebb246f",
+   "id": "0351c546",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -373,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8d988f",
+   "id": "aa105047",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -393,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4cfa5c",
+   "id": "406fa58f",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -412,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d94c2ea",
+   "id": "1e1c78c2",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106e94f5",
+   "id": "c4dc63f1",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfe9042f",
+   "id": "797cebb0",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -477,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75b1eab",
+   "id": "d9c631d1",
    "metadata": {},
    "source": [
     "# Redux"
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e10101b7",
+   "id": "0ea00a53",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
@@ -571,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37082a66",
+   "id": "aaa3fa9a",
    "metadata": {},
    "source": [
     "# Virtual DOM\n",
@@ -591,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "735f5a32",
+   "id": "4c02476f",
    "metadata": {},
    "source": [
     "# Re-Rendering\n",
@@ -604,9 +608,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89c82633",
+   "metadata": {},
+   "source": [
+    "# SASS/SCSS\n",
+    "\n",
+    "https://create-react-app.dev/docs/adding-a-sass-stylesheet/ - info on how to use SASS/SCSS with the Create React App instead of plain CSS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3e7eb7",
+   "metadata": {},
+   "source": [
+    "# Style Encapsulation\n",
+    "\n",
+    "https://create-react-app.dev/docs/adding-a-css-modules-stylesheet/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee5268b",
+   "metadata": {},
+   "source": [
+    "# Bazel\n",
+    "\n",
+    "https://github.com/bazelbuild/examples/tree/main/frontend/react - Aspect Build example\n",
+    "\n",
+    "https://betterprogramming.pub/creating-a-react-application-in-a-bazel-monorepo-9bbf67ce2030"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2322c47",
+   "metadata": {},
+   "source": [
+    "# rxjs and reactivity\n",
+    "\n",
+    "This is uncommon in React, but there is a library called __React-RxJS__ you can look into.  It has to utilize hooks because of how React works.\n",
+    "\n",
+    "It's worth noting that not being able to follow the reactive pattern of subscribing to observables might technically make React __not reactive__.\n",
+    "\n",
+    "The name of React comes from the fact that it __reacts to data changes__, although the approach is much different from observables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d5985a",
+   "id": "2552ea7a",
    "metadata": {},
    "outputs": [],
    "source": []
