Finishing React ToDo items;

--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff09215a",
+   "id": "baa89ced",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ea5b51",
+   "id": "f3bf679d",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1a9b14",
+   "id": "ac2cd8bb",
    "metadata": {},
    "source": [
     "# Links\n",
@@ -36,29 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca67c642",
-   "metadata": {},
-   "source": [
-    "# ToDo\n",
-    "\n",
-    "1. Deep Dive into the Default Project setup/config\n",
-    "1. Adding React the other way (to existing HTML+TS page)\n",
-    "1. Classes as Components\n",
-    "1. Coding Conventions (esp. for TS since tutorials use ugly JS style)\n",
-    "1. React Devtools Extension (and using it on public sites that use react)\n",
-    "1. PropTypes library (for JS only)\n",
-    "1. Node running in general, esp. running React & Angular\n",
-    "1. useContext/React Context (and when to use vs. Redux)\n",
-    "1. Testing (Jest vs. Jasmine) (https://handsonreact.com/docs/testing)\n",
-    "1. Official React site articles/tutorials\n",
-    "1. XSS vulnerabilities\n",
-    "1. Component libraries?\n",
-    "1. Bootstrap framework"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53950080",
+   "id": "1d36b238",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -66,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa860055",
+   "id": "3bd872c1",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
@@ -82,12 +60,13 @@
     "- instead of OOP concepts like services and dependency injection, you will mostly make function calls\n",
     "- routing is very similar\n",
     "- __Redux__ instead of __ngrx__\n",
-    "   - though redux can be used in Angular too"
+    "   - though redux can be used in Angular too\n",
+    "- as you'd expect, there are stylistic convention differences, such as how files are named"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "804faae5",
+   "id": "7dc04c60",
    "metadata": {},
    "source": [
     "# Setup"
@@ -95,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d224b43",
+   "id": "644c0d1f",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -110,12 +89,15 @@
     "    - https://handsonreact.com/docs/visual-studio-code-setup\n",
     "      - more stuff recommended by the tutorial site, but they clobber your settings assuming you don't already have your own\n",
     "1.  TypeScript Compiler natively supports TSX syntax without plugins needed!\n",
-    "    - for JSX, you use Babel, which does need plugins"
+    "    - for JSX, you use Babel, which does need plugins\n",
+    "1. Chrome Extensions:\n",
+    "    - React DevTools\n",
+    "    - Redux DevTools"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f8210859",
+   "id": "9bd05288",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -127,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611a3e11",
+   "id": "f734b09c",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -135,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bd5f7a0",
+   "id": "9195ba5a",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -145,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8d846f",
+   "id": "476f4a5b",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -153,7 +135,7 @@
     "## TS\n",
     "\n",
     "- `package.json` to manage node dependencies\n",
-    "- `public/index.html` has the HTML page of the app\n",
+    "- `public/index.html` has the HTML template of the app (but not the final html file)\n",
     "  - unlike in Angular, this page doesn't bootstrap the app\n",
     "  - it can only see things from inside the `public` folder\n",
     "- `src/index.tsx` is the main TypeScript (TSX) entry point\n",
@@ -161,12 +143,16 @@
     "  - WebPack takes the whole `src` folder\n",
     "  - TS for pure code and TSX for components with HTML\n",
     "    - TSX files can import TS files\n",
-    "    - TSX files can import each other"
+    "    - TSX files can import each other\n",
+    "    \n",
+    "The final `index.html` file used when you generate the app has the minified JS scripts from the app bootstrapped inside.  That is handled by __WebPack__.\n",
+    "\n",
+    "NOTE: the files that configure things like WebPack are hidden from the user in the __node_modules__ folder.  There are ways to unhide and modify them if needed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d95b4471",
+   "id": "23b24344",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -178,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16bb505",
+   "id": "5bb3aa25",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -268,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6a29e6",
+   "id": "941bbc58",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -318,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0351c546",
+   "id": "f3cd53a2",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -372,12 +358,19 @@
     "        - for that to work, it must be a __pure function__ that returns the same result with the same props\n",
     "     - it is considered an optimization rather than a gaurantee, so you still may get re-rendered when you don't think you will (don't rely on not rendering for actual functionality)\n",
     "     - you can customize the comparison used to determine if the props are equal with a 2 input predicate in teh 2nd arg of `memo()`\n",
-    "        - default comparison is via `Object.is()` on each field (not same as `===` or `==`)"
+    "        - default comparison is via `Object.is()` on each field (not same as `===` or `==`)\n",
+    "   - eg. `import {useContext, createContext} from 'react';`\n",
+    "     - `const MyContext = createContext(defaultValue)` is meant to be used __globally_ to make a context variable\n",
+    "        - it is not just a global variable - the context can change as you drill into the tree hierarchically\n",
+    "     - `const myContext = useContext(MyContext)` is mean to be used __in components__ to get the value of the context at that point in the tree\n",
+    "     - `<MyContext.Provider value={someExpression}>` wraps a part of the component tree in a value for the context\n",
+    "        - note that you did not need to use `{}` in naming the element even though it's code named (weird)\n",
+    "        - deeper wrappings of this context will shadow higher values in lower components in the subtree that ask for the context"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa105047",
+   "id": "027e0451",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -397,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "406fa58f",
+   "id": "78a382ee",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -416,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1c78c2",
+   "id": "a34319bc",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -436,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4dc63f1",
+   "id": "883fc67d",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -466,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797cebb0",
+   "id": "d9d35d10",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -481,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c631d1",
+   "id": "f0925867",
    "metadata": {},
    "source": [
     "# Redux"
@@ -489,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea00a53",
+   "id": "b473440d",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
@@ -575,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa3fa9a",
+   "id": "4b6d57d0",
    "metadata": {},
    "source": [
     "# Virtual DOM\n",
@@ -595,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c02476f",
+   "id": "9ee3d807",
    "metadata": {},
    "source": [
     "# Re-Rendering\n",
@@ -609,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c82633",
+   "id": "82ba5e55",
    "metadata": {},
    "source": [
     "# SASS/SCSS\n",
@@ -619,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3e7eb7",
+   "id": "452144fb",
    "metadata": {},
    "source": [
     "# Style Encapsulation\n",
@@ -629,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ee5268b",
+   "id": "008a7613",
    "metadata": {},
    "source": [
     "# Bazel\n",
@@ -641,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2322c47",
+   "id": "62bfa7ee",
    "metadata": {},
    "source": [
     "# rxjs and reactivity\n",
@@ -654,9 +647,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90c16478",
+   "metadata": {},
+   "source": [
+    "# Adding React to Existing Site\n",
+    "\n",
+    "This section was generated by ChatGPT 4.\n",
+    "\n",
+    "Integrating React into an existing website built with HTML and JavaScript can be done incrementally and doesn't require a complete rewrite of your existing codebase. Here's an idiomatic approach to add React to an existing site:\n",
+    "\n",
+    "### Step 1: Include React Libraries\n",
+    "First, you need to include React and ReactDOM libraries in your HTML. You can add them via CDN links in your `<head>` tag or before the closing `</body>` tag:\n",
+    "\n",
+    "```html\n",
+    "<!-- React and ReactDOM (Make sure to use the correct version) -->\n",
+    "<script src=\"https://unpkg.com/react@17/umd/react.development.js\"></script>\n",
+    "<script src=\"https://unpkg.com/react-dom@17/umd/react-dom.development.js\"></script>\n",
+    "```\n",
+    "\n",
+    "### Step 2: Identify Parts to Convert\n",
+    "Identify parts of your website that could benefit from React. It's often easier to start with isolated components like forms, navigation menus, or interactive widgets, rather than entire pages.\n",
+    "\n",
+    "### Step 3: Create a Root Element\n",
+    "In your HTML, create a root element where you want your React component to render. For example:\n",
+    "\n",
+    "```html\n",
+    "<div id=\"react-root\"></div>\n",
+    "```\n",
+    "\n",
+    "### Step 4: Write Your React Component\n",
+    "Write your React component in a separate JavaScript file. This component will be rendered inside the root element you created. For example, create a file named `MyComponent.js`:\n",
+    "\n",
+    "```javascript\n",
+    "class MyComponent extends React.Component {\n",
+    "    render() {\n",
+    "        return (\n",
+    "            <div>Hello from React!</div>\n",
+    "        );\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Step 5: Render the Component\n",
+    "Use `ReactDOM.render` to render your component inside the root element. You can include this in your `MyComponent.js` file or in a separate script:\n",
+    "\n",
+    "```javascript\n",
+    "ReactDOM.render(<MyComponent />, document.getElementById('react-root'));\n",
+    "```\n",
+    "\n",
+    "### Step 6: Load Your Component Script\n",
+    "Include your component script in your HTML file:\n",
+    "\n",
+    "```html\n",
+    "<script src=\"path/to/MyComponent.js\n",
+    "\n",
+    "\"></script>\n",
+    "```\n",
+    "\n",
+    "### Step 7: Babel for JSX (Optional)\n",
+    "If you're using JSX in your React components (which is very common), you'll need to transpile it since browsers don't understand JSX natively. One way to do this for small projects or individual components is to use Babel's standalone build directly in the browser:\n",
+    "\n",
+    "```html\n",
+    "<script src=\"https://unpkg.com/@babel/standalone@7.12.9/babel.min.js\"></script>\n",
+    "<script type=\"text/babel\">\n",
+    "    // Your JSX code here\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "This approach is not recommended for production use due to performance impacts. For a production setup, you should precompile your JSX using a build tool like Webpack and Babel.\n",
+    "\n",
+    "### Step 8: Gradually Expand\n",
+    "Once you've successfully added your first React component, you can gradually start converting other parts of your website to React. This allows you to incrementally modernize your site without a full rewrite.\n",
+    "\n",
+    "### Step 9: Consider a Bundler for Larger Projects\n",
+    "As you add more React components, you might want to consider setting up a module bundler like Webpack, along with Babel, to handle JSX compilation and improve performance. This setup is more complex but offers more flexibility and efficiency for larger applications.\n",
+    "\n",
+    "### Conclusion\n",
+    "This step-by-step process allows you to start using React in an existing website with minimal disruption. It's ideal for gradually introducing React components into legacy projects or for enhancing parts of a website with interactive features. Remember, as your usage of React grows, so should your development setup, eventually moving towards a more robust build process with tools like Babel and Webpack."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8532802",
+   "metadata": {},
+   "source": [
+    "# Coding Conventions\n",
+    "\n",
+    "1. Name __component files__ in Pascal Case (`MyComponent.tsx`)\n",
+    "1. Name other files in camel case (`myUtils.ts`)\n",
+    "1. Name functions that are components in Pascal Case (`function MyComponent()`)\n",
+    "1. Name other functions in camel case as usual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea700742",
+   "metadata": {},
+   "source": [
+    "# Other Libraries\n",
+    "\n",
+    "1. https://www.npmjs.com/package/prop-types - for stricter type checking on props in JS (not needed for TS)\n",
+    "1. https://getbootstrap.com/ - bootstrap framework has styles, components, etc. you can use (has a React section on site)\n",
+    "1. https://react-bootstrap.github.io/ - bootstrap recreated specifically for React\n",
+    "1. https://mui.com/ - React version of Google Material Design components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f82fc36",
+   "metadata": {},
+   "source": [
+    "# XSS\n",
+    "\n",
+    "1. JSX __automatically escapes__ values inserted into the DOM\n",
+    "1. React elements have an attribute called `dangerouslySetInnerHTML` that sets the inner HTML directly.  It is named that way because you are really discouraged from using it.  If you do use it, you should sanitize the text with a library like `DOMPurify`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "955f1d03",
+   "metadata": {},
+   "source": [
+    "# Testing\n",
+    "\n",
+    "__Create React App__ already sets up the __Jest__ framework and some default tests.\n",
+    "\n",
+    "You can run tests with `npm test` and then use the onscreen menu. It will watch for file changes.\n",
+    "\n",
+    "You create files that looks like `MyComponent.test.tsx` and import from `@testing-library/react`.\n",
+    "\n",
+    "This example shows the overall structure of a test.\n",
+    "```js\n",
+    "import React from 'react';\n",
+    "import { render, screen } from '@testing-library/react';\n",
+    "import HomePage from './HomePage';\n",
+    "\n",
+    "test('renders home heading', () => {\n",
+    "  render(<HomePage />);\n",
+    "  expect(screen.getByRole('heading')).toHaveTextContent('Home');\n",
+    "});\n",
+    "```\n",
+    "Note that the overall structure looks exactly like an Angular Jasmine test, but use `test` instead of `describe`, and there's no component harness/testbed there.  There actually is a `describe`, which is a wrapper for grouping tests.\n",
+    "\n",
+    "`@testing-library/react` has members such as:\n",
+    "- `render(element)` renders whatever React element you pass in (such as the component under test).\n",
+    "- `screen` gives you access to the DOM that was rendered so that you can do checks with `expect()`\n",
+    "\n",
+    "You can get more functionality with __React Test Renderer__:\n",
+    "1. `npm install react-test-renderer @types/react-test-renderer --save-dev`\n",
+    "\n",
+    "`react-test-renderer` has members such as:\n",
+    "- `renderer.create(element).toJSON()` to create a component and capture it as JSON\n",
+    "- `expect(json).toMatchSnapshot()` will take a snapshot the first time and compare it from then on\n",
+    "   - like a screendiff but in JSON\n",
+    "   \n",
+    "Jest also has __spying__ and __mocking__ built-in."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2552ea7a",
+   "id": "26c2bd9b",
    "metadata": {},
    "outputs": [],
    "source": []
